add adapters